<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="Gejala"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Gejala" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ui_border"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollY="20px"
                android:scrollbarSize="10px"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:showDividers="beginning"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/G1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G1"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/G2"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G3"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G4"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G5"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G6"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G7"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G8"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G9"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G10"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G11"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G12"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G13"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G14"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G15"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/G16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10px"
                    android:text="@string/G16"
                    android:textSize="30sp" />

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Lihat Hasil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>